# gnina-torch

./: .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  _version.py  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py  versioneer.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yaml  deploy.yaml
devtools/: README.md
devtools/conda-envs/: gnina.yaml  gninatorch-CI.yaml  gninatorch.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  requirements.yaml
docs/source/: GNINA.rst  api.rst  conf.py  getting_started.rst  index.rst  references.bib
examples/Francoeur2020/: 00_download.sh
examples/Ragoza2017/: 00_cleanup.sh  00_download.sh  01_train.sh  02_analysis.sh  README.md  plot.py
gnina/: __init__.py  _version.py  dataloaders.py  gnina.py  inference.py  losses.py  metrics.py  models.py  setup.py  training.py  transforms.py  utils.py
gnina/data/: README.md  intro  test.types
gnina/tests/: conftest.py  test_dataloaders.py  test_gnina.py  test_inference.py  test_losses.py  test_models.py  test_setup.py  test_training.py
gninatorch/: CITATION.cff  __init__.py  _version.py  dataloaders.py  gnina.py  inference.py  losses.py  metrics.py  models.py  setup.py  training.py  transforms.py  utils.py
tests/: conftest.py  test_dataloaders.py  test_gnina.py  test_import.py  test_inference.py  test_losses.py  test_models.py  test_setup.py  test_training.py  test_transforms.py  test_utils.py
(+38 files in other folders)
