[project]
name = "gnina-torch"
version = "0.0.3-dev"
authors = [
  { name = "Rocco Meli", email = "r.meli@bluemail.ch" },
  { name = "Andrew McNutt" },
]
maintainers = [{ name = "Rocco Meli", email = "r.meli@bluemail.ch" }]
description = "PyTorch implementation of GNINA scroring function"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = ["torch", "molgrid", "numpy"]

[project.optional-dependencies]
all = [
  "pytorch-ignite",
  "scipy",
  "pandas",
  "scikit-learn",
  "tqdm",
  "mlflow<2.16",
]
test = ["pytest>=6.0", "pytest-xdist>=2.5", "pytest-cov>=3.0"]
doc = ["sphinx", "sphinx_rtd_theme"]

[project.urls]
Homepage = "https://github.com/RMeli/gnina-torch"
Documentation = "https://gnina-torch.readthedocs.io/en/latest/"
Repository = "https://github.com/RMeli/gnina-torch"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
